# BayesianElo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  version.h.in
include/bayeselo/: duration.h  fastchess_stats.h  filters.h  game.h  rating_result.h  size_parse.h
src/: main.cpp
src/filters/: game_filter.cpp  game_filter.h
src/output/: export_writer.cpp  export_writer.h  terminal_output.cpp  terminal_output.h
src/parser/: chunk_splitter.cpp  chunk_splitter.h  pgn_parser.cpp  pgn_parser.h
src/rating/: bayeselo_solver.cpp  bayeselo_solver.h  fastchess_stats.cpp
src/util/: duration.cpp  size_parse.cpp  thread_pool.cpp  thread_pool.h
tests/: bench_parser.cpp  duration_tests.cpp  fastchess_stats_tests.cpp  memory_limit_tests.cpp  parser_tests.cpp  rating_tests.cpp  size_parse_tests.cpp  test_filters.cpp  test_main.cpp  test_parser.cpp  test_rating.cpp
